stop gap fixes to UI weirdness on menu

--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,33 @@
-.vertical-center {
-  line-height: 100px;
+.main-header {
+   background-color: #999;
+}
+
+.main-content {
+  position: relative;
+}
+
+h1.logo {
+  font-weight: 400;
+  font-size: 32px;
+  padding: 10px 0;
+}
+
+h1.logo a{
+  color: #efefef;
+  text-decoration: none;
+}
+
+.menu-restaurant-name-container {
+  background-color: #efefef;
+  padding: 12px 0 0 0;
+}
+
+.restaurant-name span {
+  margin-bottom: 0;
+}
+
+.restaurant-name span {
+  font-weight: 600;
 }
 
 ul {
@@ -9,19 +37,26 @@ ul {
 }
 
 .menu-when {
-  font-size: 30px;
+  font-size: 20px;
   font-weight: 300;
+  margin-right: 12px;
 }
 
 .menu-instruction {
-  line-height: 100px;
   font-weight: 500;
   font-size: 18px;
 }
 
 .menu-instructional-text-container {
-  min-height: 100px;
+  min-height: 110px;
   margin-bottom: 50px;
+  width: 100%;
+  padding: 25px;
+}
+.menu-instruction-vertical-center {
+  line-height: 110px;
+  margin: 0;
+  padding: 0;
 }
 
 .menu-instructional-text-container-start {
@@ -37,6 +72,9 @@ ul {
 .menu-instructional-text-container-success {
   color: #468847;
   background-color: #dff0d8;
+}
+.menu-instruction-restaurant-name {
+  color: #666;
 }
 
 .menu-item {
@@ -73,6 +111,10 @@ ul {
   -webkit-transition: border-color ease-in-out .15s, -webkit-box-shadow ease-in-out .15s;
   -o-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
   transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+}
+
+.pickup-countdown {
+  color: #d44950;
 }
 
 .pos-order-table {
